force-app/main/default/objects/Crypto_Order__c/Crypto_Order__c.object-meta.xml
<CustomObject>
    <label>Crypto Order</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Crypto Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crypto Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>