force-app/main/default/objects/Crypto_Order__c/fields/Coin_ID__c.field-meta.xml
<CustomField>
    <fullName>Coin_ID__c</fullName>
    <label>Coin ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>