force-app/main/default/objects/Crypto_Order__c/fields/CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>CreatedOn__c</fullName>
    <label>CreatedOn</label>
    <type>Date</type>
</CustomField>