force-app/main/default/objects/Crypto_Order__c/fields/Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Price__c</fullName>
    <label>Market Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>